Add Alert olive to Shesmu
